<resources>
    <string name="app_name">TalkLess</string>
    <string name="settings">Settings</string>
    <string name="pause">pause</string>
    <string name="play">continue</string>
    <string name="try_to_present">try to present</string>
    <string name="showStatistics">show statistics</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_b">MainActivityB</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="timer">Timer</string>
    <string name="statistics">Statistics</string>
    <string name="presentation">Presentation</string>
    <string name="close">Close</string>
    <string name="vibrationTime">Vibration time</string>
    <string name="vibrationTimeKey">vibrationTime</string>
    <string name="vibrationAmplitude">Vibration amplitude</string>
    <string name="prefColor">Color</string>
    <string name="click_to_start">CLICK TO START</string>
    <string name="start">start</string>
</resources>
