<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        android:key="switch"
        android:title="Enable horizontal swipe"
        android:defaultValue="true"
        android:summary="Disables vertical scrolling"/>

    <SeekBarPreference
        android:key="@string/vibrationTimeKey"
        android:title="@string/vibrationTime"
        android:summary="Duration of vibration after timer is finished [s]"
        android:max="10"
        android:defaultValue="1"/>

    <SeekBarPreference
        android:key="vibrationAmplitude"
        android:title="@string/vibrationAmplitude"
        android:summary="Amplitude of vibration"
        android:max="10"
        android:defaultValue="1"/>
    <ListPreference
        android:key="vibrationPreference"
        android:title="Vibration preference"
        android:entries="@array/vibration"
        android:entryValues="@array/vibrationData"/>
    <CheckBoxPreference
        android:key="nightModePref"
        android:defaultValue="false"
        android:title="Night mode"
        android:summary="Enables night mode"/>
</android.support.v7.preference.PreferenceScreen>