<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PresentationFragment">


    <Button
        android:id="@+id/clickToStart"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:visibility="gone"
        android:alpha="0.9"
        android:text="@string/click_to_start"/>

<!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:visibility="visible"
        android:textSize="34sp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewTime"/>-->

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/try_to_present"
        android:drawableTop="@drawable/ic_file_upload_black_150dp"
        android:text="@string/try_to_present"
        android:background="@null"
        android:layout_centerVertical="true"
        android:visibility="visible"
        android:layout_centerHorizontal="true" />

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"/>

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_close_black_24dp"
        android:background="@null"
        android:visibility="gone"
        android:padding="5dp"
        android:contentDescription="@string/close"
        android:layout_alignEnd="@id/pdfView" />
</RelativeLayout>